k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  # 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
  # template 描述 pod
  template:
    metadata:
      #      name: webook
      labels:
        app: webook
    # pod 的具体信息
    spec:
      containers:
        - name: webook
          image: kewei/webook:v0.0.1
          ports:
            - containerPort: 8080
